[gd_scene load_steps=15 format=3 uid="uid://cuacfdglumv2e"]

[ext_resource type="Script" path="res://Script/home.gd" id="1_44qp0"]
[ext_resource type="Texture2D" uid="uid://bphjf7kums0ie" path="res://Background/home.png" id="1_nip8l"]
[ext_resource type="Texture2D" uid="uid://t17qaf3vjkb0" path="res://Items/furnitures.png" id="2_nkfts"]
[ext_resource type="Texture2D" uid="uid://bfyu4ujsl47ot" path="res://Items/chest.png" id="3_vptk5"]
[ext_resource type="Texture2D" uid="uid://cnwxs11b28mwg" path="res://Items/carpet.png" id="4_wsiak"]
[ext_resource type="PackedScene" uid="uid://exluca04i7q7" path="res://Scene/player.tscn" id="5_474hv"]
[ext_resource type="AudioStream" uid="uid://r83j3bq38c1p" path="res://bgm/Wholesome.mp3" id="7_d25h2"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_57irt"]
texture = ExtResource("2_nkfts")
9:4/size_in_atlas = Vector2i(15, 24)
9:4/0 = 0
9:4/0/y_sort_origin = -100
9:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:4/0/physics_layer_0/angular_velocity = 0.0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-100.409, -190.919, -69.2965, -193.747, -66.468, -165.463, 59.397, -166.877, 76.3675, -190.919, 101.823, -190.919, 94.7523, 171.12, 70.7107, 164.049, 66.468, 147.078, -70.7107, 147.078, -77.7818, 168.291, -107.48, 161.22)
28:7/size_in_atlas = Vector2i(15, 18)
28:7/0 = 0
28:7/0/y_sort_origin = -100
28:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
28:7/0/physics_layer_0/angular_velocity = 0.0
28:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-117.38, -91.9239, 117.38, -87.6812, 107.48, 127.279, 67.8823, 132.936, 62.2254, 62.2254, -57.9828, 65.0538, -57.9828, 127.279, -104.652, 131.522)
46:4/size_in_atlas = Vector2i(18, 21)
46:4/0 = 0
46:4/0/y_sort_origin = -100
46:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
46:4/0/physics_layer_0/angular_velocity = 0.0
46:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-144.25, -108.894, 127.279, -111.723, 131.522, 93.3381, 104.652, 104.652, 104.652, 154.149, 76.3675, 155.564, 65.0538, 106.066, -63.6396, 107.48, -74.9533, 151.321, -101.823, 147.078, -107.48, 94.7523, -141.421, 84.8528)
69:3/size_in_atlas = Vector2i(20, 25)
69:3/0 = 0
69:3/0/y_sort_origin = -100
69:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
69:3/0/physics_layer_0/angular_velocity = 0.0
69:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-144.25, -108.894, 127.279, -111.723, 131.522, 93.3381, 104.652, 104.652, 104.652, 154.149, 76.3675, 155.564, 65.0538, 106.066, -63.6396, 107.48, -74.9533, 151.321, -101.823, 147.078, -107.48, 94.7523, -141.421, 84.8528)
9:28/size_in_atlas = Vector2i(16, 16)
9:28/0 = 0
9:28/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:28/0/physics_layer_0/angular_velocity = 0.0
9:28/0/physics_layer_0/polygon_0/points = PackedVector2Array(-120.208, -115.966, 113.137, -111.723, 111.723, 110.309, -115.966, 110.309)
26:28/size_in_atlas = Vector2i(13, 19)
26:28/0 = 0
26:28/0/y_sort_origin = 100
26:28/0/physics_layer_0/linear_velocity = Vector2(0, 0)
26:28/0/physics_layer_0/angular_velocity = 0.0
7:45/size_in_atlas = Vector2i(12, 16)
7:45/0 = 0
7:45/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:45/0/physics_layer_0/angular_velocity = 0.0
7:45/0/physics_layer_0/polygon_0/points = PackedVector2Array(-87.6812, 16.9706, -59.397, 8.48528, -60.8112, -21.2132, 76.3675, -16.9706, 76.3675, 98.9949, 19.799, 121.622, 21.2132, 65.0538, -39.598, 66.468, -45.2548, 117.38, -89.0955, 118.794)
19:48/size_in_atlas = Vector2i(21, 14)
19:48/0 = 0
19:48/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:48/0/physics_layer_0/angular_velocity = 0.0
19:48/0/physics_layer_0/polygon_0/points = PackedVector2Array(-154, -40, 156, -44, 156, 88, 115.616, 91.3126, 114, 68, -104, 70, -106, 100, -152, 96)
41:40/size_in_atlas = Vector2i(15, 21)
41:40/0 = 0
41:40/0/physics_layer_0/linear_velocity = Vector2(0, 0)
41:40/0/physics_layer_0/angular_velocity = 0.0
41:40/0/physics_layer_0/polygon_0/points = PackedVector2Array(-112, -156, 102, -154, 100, 148, -114, 156)
57:44/size_in_atlas = Vector2i(12, 17)
57:44/0 = 0
57:44/0/physics_layer_0/linear_velocity = Vector2(0, 0)
57:44/0/physics_layer_0/angular_velocity = 0.0
57:44/0/physics_layer_0/polygon_0/points = PackedVector2Array(-60.8112, -80.6102, -63.6396, -128.693, 52.3259, -131.522, 48.0833, -82.0244, 19.799, -42.4264, 90.5097, -43.8406, 93.3381, 130.108, 39.598, 130.108, 39.598, 79.196, -39.598, 77.7818, -43.8406, 132.936, -87.6812, 132.936, -86.267, -46.6691, -8.48528, -46.6691)
70:40/size_in_atlas = Vector2i(18, 22)
70:40/0 = 0
70:40/0/y_sort_origin = -100
70:40/0/physics_layer_0/linear_velocity = Vector2(0, 0)
70:40/0/physics_layer_0/angular_velocity = 0.0
70:40/0/physics_layer_0/polygon_0/points = PackedVector2Array(-132, -12, 134, -16, 144, 158, 96, 158, 88, 130, -86, 132, -92, 160, -140, 160)
76:29/size_in_atlas = Vector2i(10, 11)
76:29/0 = 0
76:29/0/physics_layer_0/linear_velocity = Vector2(0, 0)
76:29/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3u24l"]
texture = ExtResource("3_vptk5")
2:3/size_in_atlas = Vector2i(12, 10)
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-89.0955, -15.5564, 89.0955, -21.2132, 90.5097, 70.7107, 38.1838, 70.7107, -86.267, 69.2965)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bd3s0"]
texture = ExtResource("4_wsiak")
7:16/size_in_atlas = Vector2i(50, 33)
7:16/0 = 0
7:16/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:16/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_d6123"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_57irt")
sources/1 = SubResource("TileSetAtlasSource_3u24l")
sources/2 = SubResource("TileSetAtlasSource_bd3s0")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nkyp5"]
size = Vector2(93, 45)

[sub_resource type="LabelSettings" id="LabelSettings_pic8i"]
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_uxvkk"]
font_size = 25

[node name="HomeScene" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_44qp0")

[node name="Home" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(575, -109)
scale = Vector2(1.12109, 0.862416)
texture = ExtResource("1_nip8l")
offset = Vector2(0, 500)

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
scale = Vector2(0.5, 0.5)
tile_set = SubResource("TileSet_d6123")
format = 2
layer_0/name = "furniture"
layer_0/y_sort_enabled = true
layer_0/z_index = 1
layer_0/tile_data = PackedInt32Array(1769481, 4587520, 40, 2359324, 589824, 4, 1703981, 3735552, 44, 852036, 589824, 28, 1835093, 131073, 3, 1572983, 3014656, 4, 2752631, 1245184, 48, 4456457, 4521984, 3, 4653087, 1835008, 7, 4653106, 458752, 45, 4653149, 1703936, 28, 4391044, 2686976, 40, 4259871, 4980736, 29)
layer_1/name = "carpet"
layer_1/tile_data = PackedInt32Array(3014685, 458754, 16)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(6, 219)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
visible = false
polygon = PackedVector2Array(3, 1, 24, 209, -7, 420, 63, 421, 164, 410, 335, 412, 397, 412, 506, 405, 684, 405, 692, 424, 787, 428, 792, 407, 1124, 402, 1152, 430, 1124, 369, 1118, 155, 1117, 21, 753, 9, 371, 11, 28, 6, 383, -33, 806, -53, 1147, -16, 1187, 159, 1179, 320, 1168, 465, 798, 480, 294, 470, -24, 475, -56, 366)

[node name="GoOutToGrass" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoOutToGrass"]
position = Vector2(746.5, 617.5)
shape = SubResource("RectangleShape2D_nkyp5")

[node name="player" parent="." instance=ExtResource("5_474hv")]
position = Vector2(365, 350)

[node name="Window" type="Window" parent="."]
title = "BackGround Story and Instrutions!"
initial_position = 1
size = Vector2i(600, 320)
visible = false

[node name="Label" type="Label" parent="Window"]
offset_right = 40.0
offset_bottom = 23.0
text = "Your name is Ali. You like guns and monster games. 
And you want to be a knight!
One night, you have a dream, in the dream you have a gun, 
and the goal in this world is to destroy all the monsters in the world... 
You seem to be in the scene, this is not like a dream! 
So you set out on this journey.
Instructions: W S A D keys control up and down, left and right.
And click left mouse button to shoot. Have fun!
The HUD above is the amount of coins, the enemies killed so far, 
and enemies in the current scene
IMPORTANT: You have only one life in game!!!"
label_settings = SubResource("LabelSettings_pic8i")

[node name="Label" type="Label" parent="."]
offset_left = 454.0
offset_top = 383.0
offset_right = 982.0
offset_bottom = 418.0
text = "Go outside the door and start your journey!
W S A D : Up Down Left Right
Left Mouse Button: Shoot"
label_settings = SubResource("LabelSettings_uxvkk")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_d25h2")

[connection signal="body_entered" from="GoOutToGrass" to="." method="_on_go_out_to_grass_body_entered"]
[connection signal="body_exited" from="GoOutToGrass" to="." method="_on_go_out_to_grass_body_exited"]
[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
